@@ -87,8 +87,12 @@ antiquotations in control symbol notation, e.g. \<^const_name> becomes
 more accurately: only terminal proof steps ('by' etc.) are skipped.
 
 * Command-line tool "isabelle document" has been re-implemented in
-Isabelle/Scala, with simplified arguments and explicit errors from the
-latex process. Minor INCOMPATIBILITY.
+Isabelle/Scala, with simplified arguments. Minor INCOMPATIBILITY.
+
+* Original source positions are inlined into generated tex files: this
+improves error messages by "isabelle document", but may sometimes
+confuse LaTeX. Rare INCOMPATIBILITY, set option
+"document_positions=false" to avoid this.
 
 
 *** HOL ***
